--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.2.7
+beautifulsoup4==4.9.1
 Django==3.0
+django-bootstrap4==1.1.1
+pkg-resources==0.0.0
 pytz==2020.1
+soupsieve==2.0.1
 sqlparse==0.3.1
